# calculator

./: .gitignore  CMakeLists.txt  calculator_github_description.md  calculator_security_policy.md
docs/: calculator_contributing_guide.md  calculator_style_guide.md
include/core/: app.h
include/ui/: button_panel.h  main_window.h
src/: main.cpp
src/core/: app.cpp
src/ui/: button_panel.cpp  main_window.cpp
